# python-template

./: .gitattributes  .gitignore  CLAUDE.md  RATIONALE.md  README.ko.md  README.md  SETUP.md  scaffold.sh  validate.sh
.claude/rules/: architecture.md  code-style.md  plan-review-deep.md  test-modification.md  verification-loop.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: validate.yml
docs/architecture/: containers.md
docs/architecture/decisions/: ADR-001-pytest-cov-threshold.md  ADR-002-clone-script-scaffolding.md  ADR-003-branch-protection.md  ADR-004-template-governance-rationale.md
docs/data/: dictionary.md
docs/learning-paths/: fastapi-production-roadmap.md
docs/requirements/: _FR-template.md
docs/templates/: phase-e-pr-template.md
examples/: .coderabbit.yaml  .gitignore  .importlinter  .pre-commit-config.yaml  ci.yml  dependabot.yml  pyproject.scientific.toml  pyproject.toml
examples/archetype-data-science/: .importlinter  pyproject.toml
examples/archetype-data-science/src/my_project/: __init__.py  pipeline.py
examples/archetype-data-science/tests/regression/: test_pipeline_regression.py
examples/archetype-fastapi/: pyproject.toml
examples/archetype-fastapi/src/my_project/: __init__.py  main.py
examples/archetype-fastapi/src/my_project/core/: __init__.py  context.py  exceptions.py  logging.py
examples/archetype-fastapi/src/my_project/handlers/: __init__.py  exception.py
examples/archetype-fastapi/src/my_project/repositories/: __init__.py
examples/archetype-fastapi/src/my_project/routers/: __init__.py
examples/archetype-fastapi/src/my_project/schemas/: __init__.py  error.py
examples/archetype-fastapi/src/my_project/services/: __init__.py
examples/archetype-fastapi/tests/: conftest.py  test_context.py  test_exceptions.py  test_main.py  test_schemas.py
examples/archetype-library/: .importlinter  pyproject.toml
examples/archetype-library/src/my_project/: __init__.py  cli.py  core.py
examples/archetype-library/tests/: test_smoke.py
examples/guides/: test-modification-scenarios.md
test/: scaffold-e2e.sh
